--- a/style.css
+++ b/style.css
@@ -72,24 +72,40 @@ a {
     font-size: 18px;
 }
 
+.sign-up {
+    color: #f9faf8;
+    background-color: #3882F6;
+    border: solid #3882F6;
+    border-radius: 3px;
+    width: 100px;
+    padding: 8px;
+ }
+
 .info {
     display: flex;
-    justify-content: center;
-
+    flex-direction: column;
 }
 
 #info-header {
+    display: flex;
+    justify-content: center;
     color: #1F2937;
     font-size: 36px;
     font-weight: bold;
-    padding: 20px;
+    padding: 50px;
 }
 
-.sign-up {
-   color: #f9faf8;
-   background-color: #3882F6;
-   border: solid #3882F6;
-   border-radius: 3px;
-   width: 100px;
-   padding: 8px;
+.info-content .info-jpeg {
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+    border: solid #3882F6 4px;
+    border-radius: 20px;
+}
+
+.info-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
 }
