--- a/style.css
+++ b/style.css
@@ -119,4 +119,24 @@ a {
 
 .quote {
     background-color: #E5E7EB;
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#quote-text {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1F2937;
+    width: 800px;
+}
+
+#quote-name {
+    font-size: 24px;
+    font-weight: bold;
+    color: #1F2937;
+    padding-right: 275px;
+    align-self: flex-end;
 }
